--- a/Lab2/CMakeLists.txt
+++ b/Lab2/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Lab2)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(Lab2 main.cpp)
+add_executable(Lab2 main.cpp Graph.h Graph.cpp Algorithm.h Search.h Search.cpp SearchAlgorithms.h SearchAlgorithms.cpp)
